# airflow-provider-baserow

./: README.md  pyproject.toml
baserow_provider/: __init__.py
baserow_provider/example_dags/: sample.py
baserow_provider/hooks/: baserow.py
tests/hooks/: test_sample_hook.py
tests/operators/: test_sample_operator.py
tests/sensors/: test_sample_sensor.py
